# api/controllers/videogame.controller.js
@@ -4,26 +4,26 @@ var controllerHelper = require('../helpers/controller.helper');
 const {Videogames} = require('../models');
 
 // Module Name
-const MODULE_NAME = '[VideoGame Controller]';
+const MODULE_NAME = '[Videogame Controller]';
 // Error Messages
 const GS_CT_ERR_GAMESYSTEM_NOT_FOUND = 'Vdeo game not found';
 // Success Messages
 const GS_CT_DELETED_SUCCESSFULLY = 'Video game deleted successfully';
 
-function getVideoGames(req, res) {
+function getVideogames(req, res) {
     try {
 
         Videogames.findAll()
-            .then(videoGameList => res.status(200).send(videoGameList))
+            .then(videogameList => res.status(200).send(videogameList))
             .catch(error => res.status(500).send(error));
 
     } catch (error) {
         console.log("Was an error");
-        controllerHelper.handleErrorResponse(MODULE_NAME, getVideoGames.name, error, res);
+        controllerHelper.handleErrorResponse(MODULE_NAME, getVideogames.name, error, res);
     }
 }
 
-function createVideoGame(req, res) {
+function createVideogame(req, res) {
 
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE'); // If needed
@@ -40,31 +40,31 @@ function createVideoGame(req, res) {
                 gamesystem: parameters.gamesystem,
                 genre: parameters.genre,
                 year: parameters.year,
-        }).then(videoGames => res.status(201).send(videoGames))
+        }).then(videogames => res.status(201).send(videogames))
             .catch(error => res.status(400).send(error));
 
     } catch (error) {
         console.log("Was an error");
-        controllerHelper.handleErrorResponse(MODULE_NAME, createVideoGame.name, error, res);
+        controllerHelper.handleErrorResponse(MODULE_NAME, createVideogame.name, error, res);
     }
 
 }
 
-function getVideoGameById(req, res) {
+function getVideogameById(req, res) {
     try {
 
         var id = req.swagger.params.id.value;
 
         Videogames.findByPk(id)
-            .then(videoGame => res.status(200).send(videoGame));
+            .then(videogame => res.status(200).send(videogame));
 
     } catch (error) {
         console.log("Was an error");
-        controllerHelper.handleErrorResponse(MODULE_NAME, getVideoGameById.name, error, res);
+        controllerHelper.handleErrorResponse(MODULE_NAME, getVideogameById.name, error, res);
     }
 }
 
-function deleteVideoGame(req, res) {
+function deleteVideogame(req, res) {
 
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE'); // If needed
@@ -73,18 +73,18 @@ function deleteVideoGame(req, res) {
 
     var id = req.swagger.params.id.value;
 
-    Videogames.findByPk(id).then(videoGame => {
-        if (!videoGame) {
+    Videogames.findByPk(id).then(videogame => {
+        if (!videogame) {
             res.status(200).send({"success": 0, "description": "not found !"});
         } else {
-            return videoGame.destroy()
+            return videogame.destroy()
                 .then(() => res.status(200).send({"success": 1, "description": "deleted!"}))
                 .catch(() => res.status(403).send({"success": 0, "description": "error !"}));
         }
     }).catch(error => console.log("There was an error: " + error));
 }
 
-function updateVideoGame(req, res) {
+function updateVideogame(req, res) {
 
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE'); // If needed
@@ -96,33 +96,33 @@ function updateVideoGame(req, res) {
         var id = req.swagger.params.id.value;
         var parameters = req.body;
 
-        Videogames.findByPk(id).then(videoGame => {
-                if (!videoGame) {
+        Videogames.findByPk(id).then(videogame => {
+                if (!videogame) {
                     res.status(401).send(({}));
                 }
-                return videoGame.update({
+                return videogame.update({
                     name: parameters.name,
                     developer: parameters.developer,
                     gamesystem: parameters.gamesystem,
                     genre: parameters.genre,
                     year: parameters.year
-                    }).then(() => res.status(200).send(videoGame))
-                    .catch(error => res.status(403).send(videoGame));
+                    }).then(() => res.status(200).send(videogame))
+                    .catch(error => res.status(403).send(videogame));
             }).catch(error => console.log("There was an error: " + error));
 
     } catch (error) {
         console.log("Was an error");
-        controllerHelper.handleErrorResponse(MODULE_NAME, updateVideoGame.name, error, res);
+        controllerHelper.handleErrorResponse(MODULE_NAME, updateVideogame.name, error, res);
     }
 }
 
 module.exports =
 {
-    getVideoGames,
-    getVideoGameById,
-    createVideoGame,
-    updateVideoGame,
-    deleteVideoGame,
+    getVideogames,
+    getVideogameById,
+    createVideogame,
+    updateVideogame,
+    deleteVideogame,
     GS_CT_ERR_GAMESYSTEM_NOT_FOUND,
     GS_CT_DELETED_SUCCESSFULLY,
     MODULE_NAME
